<resources>
    <string name="app_name">vmusic</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al Inicio de Sesión</string>
    <string name="ir_a_ubicaci_n">Ir a Ubicación</string>
    <string name="bienvenido_a_vmusic">Bienvenido a VMusic</string>
    <string name="formulario_de_ingreso_de_m_sica">Formulario de Ingreso de Música</string>
    <string name="ingrese_el_nombre_de_la_canci_n">Ingrese el Nombre de la Canción</string>
    <string name="ingrese_el_nombre_del_lbum">Ingrese el Nombre del Álbum</string>
    <string name="ingrese_la_direcci_n_ubicaci_n_del_archivo_o_url">Ingrese la Dirección (Ubicación del archivo o URL)</string>
    <string name="agregar">AGREGAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="siguiente_pesta_a">Siguiente pestaña</string>
    <string name="volver">Volver</string>
    <string name="bienvenido_a_vmusicc">Bienvenido a VMusic</string>
    <string name="inicio_de_sesi_n">Inicio de sesión</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="acceder">Acceder</string>
    <string name="aud_fonos">Audífonos</string>
</resources>