<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patioActivity">

    <!-- Formulario de Ingreso de Música -->
    <LinearLayout
        android:id="@+id/linearLayoutFormulario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBotones">

        <TextView
            android:id="@+id/tvFormularioTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/formulario_de_ingreso_de_m_sica"
            android:textColor="#000"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtNombreCancion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_nombre_de_la_canci_n"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtNombreAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_el_nombre_del_lbum"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_la_direcci_n_ubicaci_n_del_archivo_o_url"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/spSpinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />
    </LinearLayout>

    <!-- Botones en una fila -->
    <LinearLayout
        android:id="@+id/linearLayoutBotones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutFormulario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <!-- Botón para agregar música -->
        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="#A87FF1"
            android:onClick="onClickAgregar"
            android:text="@string/agregar"
            android:textColor="#000" />

        <!-- Botón para eliminar música -->
        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="#A87FF1"
            android:onClick="onClickEliminar"
            android:text="@string/eliminar"
            android:textColor="#000" />

        <!-- Botón para modificar música -->
        <Button
            android:id="@+id/btnModificar"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:backgroundTint="#A87FF1"
            android:onClick="onClickModificar"
            android:text="@string/modificar"
            android:textColor="#000"
            android:textSize="11sp" />
    </LinearLayout>

    <!-- Lista de canciones -->
    <ListView
        android:id="@+id/lstListaCanciones"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBotones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>


